--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -62,4 +62,4 @@ other = "Suche nach etwas ..."
 other = "Inhaltsverzeichnis"
 
 [copyright]
-other = "made by {{ .name }} using <a href=\"https://github.com/jackyzha0/quartz\">Quartz</a>, © {{ .year }}"
+other = "made by {{ .name }} © {{ .year }}"
